--- a/GusStyle2page.html
+++ b/GusStyle2page.html
@@ -21,7 +21,7 @@
     <div class="image-container">
         <img src="gus.svg" alt="Banderogus" class="center-image" />
     </div>
-    
+
     <section id="facts">
         <h2>Цікаві факти про ігри, шопінг та знижки</h2>
         <div class="columns-container">
@@ -69,16 +69,17 @@
     </section>
 
 
-    <selection id="game">
-        <h2>Наші ірги</h2>
+    <section id="game">
+        <h2>Наші ігри</h2>
         <p class="text">Вибирай, грай та вигравай </p>
-         <!-- Контейнер для картинки -->
+        <!-- Контейнер для картинки -->
         <div class="game-image-wrapper">
-            <a href="#" id="game-image-link">
-                <img src="avatar.jpg" alt="Ігрове фото" id="game-image" />
+            <a href="https://gusstyle-game.netlify.app/" target="_blank" rel="noopener noreferrer">
+                <img src="avatar.jpg" alt="avatar" id="game-image" />
             </a>
         </div>
-    </selection>
+    </section>
+
     <footer>
         <p>© 2025 GusІенду. Усі права захищені.</p>
     </footer>
