--- a/GusStyle2page.html
+++ b/GusStyle2page.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Геймофікований інтернет-магазин</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <header>
         <h1>Вітаємо у нашому інтернет-магазині</h1>
-
         <nav>
             <a href="https://gusstyle2.netlify.app/">Головна</a>
             <a href="#facts">Цікаві факти</a>
@@ -17,45 +16,62 @@
             <a href="#game">Ігри</a>
         </nav>
     </header>
-    <!-- Фото по середині -->
+
     <div class="image-container">
         <img src="gus.svg" alt="Banderogus" class="center-image" />
     </div>
 
-    <section id="facts">
+    <section id="facts" class="container">
         <h2>Цікаві факти про ігри, шопінг та знижки</h2>
         <div class="columns-container">
             <div class="column">
-                <p class="interactive">Чи знали ви, що деякі магазини використовують механіки відеоігор, щоб залучити клієнтів? Наприклад, програми лояльності з рівнями і бонусами схожі на систему досвіду в RPG!</p>
+                <p class="interactive">
+                    Чи знали ви, що деякі магазини використовують механіки відеоігор, щоб залучити клієнтів? Наприклад, програми лояльності з рівнями і бонусами схожі на систему досвіду в RPG!
+                </p>
             </div>
             <div class="column">
-                <p class="interactive">Перші гейміфіковані акції з’явилися ще в 80-х! Наприклад, McDonald's Monopoly — одна з найуспішніших акцій, яка працює й досі.</p>
+                <p class="interactive">
+                    Перші гейміфіковані акції з’явилися ще в 80-х! Наприклад, McDonald's Monopoly — одна з найуспішніших акцій, яка працює й досі.
+                </p>
             </div>
             <div class="column">
-                <p class="interactive">Деякі бренди надають знижки за фізичну активність. Наприклад, Reebok робив акцію, де клієнти могли отримати знижку за кількість зроблених віджимань у магазині!</p>
+                <p class="interactive">
+                    Деякі бренди надають знижки за фізичну активність. Наприклад, Reebok робив акцію, де клієнти могли отримати знижку за кількість зроблених віджимань у магазині!
+                </p>
             </div>
             <div class="white-square">
-                <p class="interactive">Дослідження показують, що гейміфікація може збільшити залучення клієнтів на 50%! Бренди активно використовують ці механіки для підвищення лояльності своїх покупців.</p>
+                <p class="interactive">
+                    Дослідження показують, що гейміфікація може збільшити залучення клієнтів на 50%! Бренди активно використовують ці механіки для підвищення лояльності своїх покупців.
+                </p>
             </div>
             <div class="white-square">
-                <p class="interactive">А в Японії деякі кафе роблять знижки для людей, які приходять без смартфонів! Вони заохочують спілкування в реальному житті.</p>
+                <p class="interactive">
+                    А в Японії деякі кафе роблять знижки для людей, які приходять без смартфонів! Вони заохочують спілкування в реальному житті.
+                </p>
             </div>
         </div>
     </section>
-    <section id="discounts">
+
+    <section id="discounts" class="container">
         <h2>Як отримати знижку на нашому сайті</h2>
         <div class="discounts-container">
             <div class="discount-item">
                 <div class="fact-number">1</div>
-                <p class="interactive">Зазвичай щоб отримати знижку, бонуси, або щось подібне, доводиться пройти досить не легкий і муторний шлях.</p>
+                <p class="interactive">
+                    Зазвичай щоб отримати знижку, бонуси, або щось подібне, доводиться пройти досить не легкий і муторний шлях.
+                </p>
             </div>
             <div class="discount-item">
                 <div class="fact-number">2</div>
-                <p class="interactive">Зареєструйся, оплати щось, що взагалі не потрібно оплачувати, але система просить прив'язати твою карту, щоб що?</p>
+                <p class="interactive">
+                    Зареєструйся, оплати щось, що взагалі не потрібно оплачувати, але система просить прив'язати твою карту, щоб що?
+                </p>
             </div>
             <div class="discount-item">
                 <a href="https://roaring-churros-d0487f.netlify.app/" class="fact-number button-link">3</a>
-                <p class="interactive">Тут такого не буде, Ви до нас прийшли, зареєструвались, тим самим підписались на отримання різних акцій від нас і все. І ти можеш грати.</p>
+                <p class="interactive">
+                    Тут такого не буде, Ви до нас прийшли, зареєструвались, тим самим підписались на отримання різних акцій від нас і все. І ти можеш грати.
+                </p>
             </div>
             <div class="discount-item">
                 <div class="fact-number">4</div>
@@ -63,16 +79,16 @@
             </div>
             <div class="discount-item">
                 <div class="fact-number">5</div>
-                <p class="interactive">Отримай свої законні бали з ігор і можеш купувати різні бонуси, наші продукти, та отримувати знижки у різні магазини.</p>
+                <p class="interactive">
+                    Отримай свої законні бали з ігор і можеш купувати різні бонуси, наші продукти, та отримувати знижки у різні магазини.
+                </p>
             </div>
         </div>
     </section>
 
-
-    <section id="game">
+    <section id="game" class="container">
         <h2>Наші ігри</h2>
-        <p class="text">Вибирай, грай та вигравай </p>
-        <!-- Контейнер для картинки -->
+        <p class="text">Вибирай, грай та вигравай</p>
         <div class="game-image-wrapper">
             <a href="https://gusstyle-game.netlify.app/" target="_blank" rel="noopener noreferrer">
                 <img src="avatar.jpg" alt="avatar" id="game-image" />
@@ -83,7 +99,7 @@
     <footer>
         <p>© 2025 GusІенду. Усі права захищені.</p>
     </footer>
-    <script src="script.js"></script>
 
+    <script src="script.js"></script>
 </body>
 </html>
